--- a/报告_答案.md
+++ b/报告_答案.md
@@ -53,6 +53,26 @@ N = (60 mm / 5 mm) + 1 = 13
 
 ---
 
+## 第2部分：在Matlab中读取A-scan矩阵并提取断层扫描的可观测量
+
+### 问题5：显示A-scan矩阵及其包络（以dB表示）
+
+**方法：**
+1. 读取所有信号文件构建矩阵
+2. 计算包络：`envelope = abs(hilbert(signal))`
+3. 转换为dB：`envelope_dB = 20*log10(envelope)`
+4. 用`imagesc()`显示
+
+**实验结果描述：**
+
+我们采用了两种可视化方法：
+- **二维显示**：使用`imagesc`将13次采集的信号以彩色图像形式展示，横轴为时间采样点，纵轴为平移位置
+- **一维对比显示**：将13次采集逐个展示，左侧为RF射频信号，右侧为对应的包络信号
+
+图像中可以清晰观察到信号到达时间约在93微秒处，物体区域的信号衰减明显。
+
+---
+
 ### 问题6a：提出一个可以从A-scan原始信号中表示衰减项 ∫μ(x,y)dl 的量
 
 **简答：**
@@ -70,6 +90,28 @@ N = (60 mm / 5 mm) + 1 = 13
 - A_reference：参考幅度（无物体时的信号）
 
 **实际实现**：提取每个A-scan的包络最大值，与参考值比较后取对数
+
+---
+
+### 问题6b：提取幅度并与GS-EchoView比较
+
+**方法：**
+1. 从每个A-scan提取最大幅度或包络峰值
+2. 转换为dB：`amp_dB = 20*log10(amp)`
+3. 与`amp_extraites`对比绘图
+4. 计算平均误差和标准差
+
+**实验结果描述：**
+
+- 取每次采集信号的最大值构成向量A
+- 进行一次空白采集，取其最大值作为参考A₀
+- 制造商软件默认使用A₀=1作为参考
+
+**对比图描述：** 图中显示两条曲线：
+- **蓝色曲线**：我们的实验测量结果
+- **红色曲线**：制造商软件的数据
+
+两条曲线趋势一致，但存在一个固定的**垂直偏移（offset）**，这是因为参考值A₀选取不同导致的。
 
 ---
 
@@ -116,6 +158,20 @@ R = 360° / 16.2° = 22.22
 
 ---
 
+### 问题10：评论所获得的结果
+
+**实验结果描述：**
+
+在重建图像中，我们观察到圆柱体物体内部存在**3个不同的区域**，各区域对超声波的衰减程度不同。这表明物体内部由不同材料组成，它们具有不同的声学特性。
+
+**评估要点：**
+- 几何准确性：物体直径约60mm，形状正确
+- 内部结构：清晰可见3个不同衰减区域
+- 伪影分析：22个角度会产生轻微条纹伪影
+- 改进建议：增加角度和平移采样密度
+
+---
+
 ### 问题11：如何获得更好的断层扫描结果？
 
 **简答：**
@@ -147,45 +203,22 @@ R = 360° / 16.2° = 22.22
 
 ---
 
-## 需要实验数据的问题简答
-
-### 问题5：显示A-scan矩阵及其包络（以dB表示）
-
-**方法：**
-1. 读取所有信号文件构建矩阵
-2. 计算包络：`envelope = abs(hilbert(signal))`
-3. 转换为dB：`envelope_dB = 20*log10(envelope)`
-4. 用`imagesc()`显示
-
----
-
-### 问题6b：提取幅度并与GS-EchoView比较
-
-**方法：**
-1. 从每个A-scan提取最大幅度或包络峰值
-2. 转换为dB：`amp_dB = 20*log10(amp)`
-3. 与`amp_extraites`对比绘图
-4. 计算平均误差和标准差
-
----
-
-### 问题10：评论所获得的结果
-
-**评估要点：**
-- 几何准确性：物体直径约60mm，形状是否正确
-- 伪影分析：22个角度会产生轻微条纹伪影
-- 衰减分布：内部应相对均匀
-- 改进建议：增加角度和平移采样密度
-
----
+## 第4部分：Matlab中的断层扫描
 
 ### 问题12：显示可观察量的矩阵
 
 **方法：**
-- 正弦图（sinogram）：31×22矩阵
+- 正弦图（sinogram）：31×23矩阵
 - 每列对应一个角度的投影
 - 用`imagesc(sinogram)`显示
-- 圆形物体呈现正弦波纹特征
+
+**实验结果描述：**
+
+使用`imagesc`显示的采集矩阵为**31行×23列**：
+- 31行对应31个不同的平移位置
+- 23列对应23个不同的旋转角度
+
+图像呈现典型的正弦图特征，物体的投影位置随旋转角度呈正弦变化。图中可以看到不同亮度带，反映了3个不同衰减区域在各角度投影的叠加效果。
 
 ---
 
@@ -197,30 +230,16 @@ theta = 0:16.2:(22-1)*16.2;
 reconstruction = iradon(sinogram, theta, 'Shepp-Logan', 'spline', size(sinogram,1));
 ```
 
-**对比：**
-- 无滤波：模糊，星形伪影
-- Shepp-Logan：清晰，与GS-EchoView应一致
-- 差异来自滤波器和预处理方法
+**实验结果描述：**
 
----
+使用`iradon`进行逆Radon变换重建断层图像，成功还原了物体内部的**3个衰减区域**。
 
-## 关键数据汇总
+**不同插值和滤波器的对比：**
 
-| 参数 | 数值 |
-|------|------|
-| 样本直径 | 60 mm |
-| 水箱宽度 | 14 cm |
-| 声速 | 1500 m/s |
-| 换能器频率 | 2 MHz |
-| 信号到达时间 | 93.3 μs |
-| A-scan采集次数 | 13次（步长5mm） |
-| 平移步长（断层扫描） | 2 mm |
-| 角度步长 | 16.2° |
-| 旋转次数 | 22次 |
-| 每次旋转采集数 | 31次 |
-| 总测量次数 | 682次 |
+1. **线性插值（默认）**：重建图像清晰显示3个衰减区域，边界可辨识
 
----
+2. **样条插值（spline）**：结果与线性插值非常接近，过渡更平滑，但整体差异不大
 
-**报告生成日期**：2026-01-20
-**课程**：TDSI - 超声断层扫描TP
+3. **Shepp-Logan滤波器**：相比默认滤波器，该滤波器能**更好地分离不同区域**，边界更加清晰锐利
+
+**结论：** 滤波处理会影响边缘信息的保留。Shepp-Logan滤波器在区域分离方面效果更好，但可能损失部分轮廓细节。
